--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "bootswatch": "3.3.1+2",
     "font-awesome": "4.2.0",
     "spin.js": "2.0.2",
-    "jquery-icheck": "2.x"
+    "jquery-icheck": "2.x",
+    "personnel-theme": "29th/personnel-theme"
   },
   "overrides": {
     "bootstrap-social": {
